[package]
name = "pcgtools"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jeff Garzik"]
description = "pcgtools: tools for reading PCgen PCC and LST data files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
